langda/history/test_history/#test_results_result.txt
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for ''->'/2' at 6:59.Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for ''->'/2' at 6:43.% Problog Inference Result：
operation(img2,img7,0) = 1.0000
operation(img1,img2,X2) = 0.0000Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for ''->'/2' at 6:62.% Problog Inference Result：
operation(img7,img8,0) = 1.0000
operation(img2,img3,5) = 1.0000
operation(img3,img8,0) = 1.0000
operation(img1,img2,3) = 1.0000% Problog Inference Result：
operation(img7,img8,0) = 0.0000
operation(img2,img3,5) = 1.0000
operation(img3,img8,0) = 0.0000
operation(img1,img2,3) = 1.0000% Problog Inference Result：
operation(img7,img8,0) = 0.0000
operation(img2,img3,5) = 1.0000
operation(img3,img8,0) = 0.0000
operation(img1,img2,3) = 1.0000% Problog Inference Result：
operation(img7,img8,0) = 0.0000
operation(img2,img3,5) = 1.0000
operation(img3,img8,0) = 0.0000
operation(img1,img2,3) = 1.0000% Problog Inference Result：
operation(img7,img8,0) = 0.0000
operation(img2,img3,5) = 1.0000
operation(img3,img8,0) = 0.0000
operation(img1,img2,3) = 1.0000% Problog Inference Result：
operation(img7,img8,0) = 0.0000
operation(img2,img3,5) = 1.0000
operation(img3,img8,0) = 0.0000
operation(img1,img2,3) = 1.0000% Problog Inference Result：
operation(img7,img8,0) = 0.0000
operation(img2,img3,5) = 1.0000
operation(img3,img8,0) = 0.0000
operation(img1,img2,3) = 1.0000% Problog Inference Result：
operation(img7,img8,0) = 0.0000
operation(img2,img3,5) = 1.0000
operation(img3,img8,0) = 0.0000
operation(img1,img2,3) = 1.0000